--- a/front/src/locales/ru.json
+++ b/front/src/locales/ru.json
@@ -1,31 +1,36 @@
 {
-  "split": "Разделить",
-  "merge": "Объединить",
-  "order" : "Порядок",
-  "selected-pages" : "Выбранные страницы",
+  "split.split-btn": "Разделить",
+  "split.split-naming-btn": "Именование",
+  "split.split-by-pages-btn": "Разделить постранично",
+  
+  "pages.selected-pages" : "Выбранные страницы",
+
+  "merge.merge-btn": "Объединить",
+  "cardes.merge-order" : "Порядок",
 
   "input-file": "Выберите файл",
   "select-filename": "Выберите PDF файл",
   "select-filenames": "Выберите PDF файлы",
   "input-clear": "Удалить файл",
 
-  "split-pro": "Разделить + имя",
-  "split-all": "Разделить постранично",
-
   "waiting": "Обработка ...",
   
+  "import-data": "Импорт",
+  "export-data": "Экспорт",
+  "delete-database": "Очистить базу",
+
   "alert-selected-pages": "Не выбранны страницы для разделения!",
   
   "namespace": "Пространства имен",
   "filename": "Имена файлов",
   "download-db": "Загрузить имена",
-  "add-form": "Добавить ",
+  "add-form": "Добавить",
   "add-namespace": "Добавить пространство имен",
   "add-filename": "Добавить имя файла к пространтсву имен",
   "validate-input-len-add-form": "Длина имени должна быть не меньше 3 символов",
   "validate-not-selected-namespace": "Выберите пространтсво имен",
   "warn-select-filename": "Выберите имя файла",
-  "warn-empty-db": "Пустая БД! Создайте пространства имен и заполните их именами файлов",
+  "warn-empty-db": "Пустая База данных. Добавьте в ручную или импортируйте из файла",
  
   "m-sel-undo": "Отмена",
   "m-sel-ok": "Ок",
@@ -46,12 +51,12 @@
   "prompt-namespace": "Пространства имен в которых содержатся имена файлов",
   "prompt-split-all": "Разделяет файл постранично, упаковывая в архив",
   "prompt-split-pro": "Выбор имени для файла полученного в результате разделения. Возможно добавить пространство имен для хранения имен файлов. При добавление, все сохраняется в базу данных",
-  "prompt-download-db": "Загрузка данных из БД, если не произошло автоматической загрузки",
+  "prompt-download-db": "Загрузка данных из базы данных, если не произошло автоматической загрузки",
   "prompt-add-form-filename" : "Имя файла должно быть уникальным в своем пространстве имен. Минимальная длина имени файла должна быть 3 символа. Не забудьте выбрать пространство имен, куда планируется сохранить имя файла",
   "prompt-add-form-namespace" : "Название должно быть уникальным. Минимальная длина названия пространства имен должна быть 3 символа",
   "prompt-card-order": "Слева на право, порядок в котором будут объединены файлы",
-  "prompt-order" : "При активации кнопка меняет цвет. Если функция включена, порядок выделения страниц - важен! Обратите внимание на порядок выделенных выделенных страниц! Также включается возможность менять страницы местами перетаскиванием",
-  "prompt-delete" : "При активации кнопка меняет цвет. Если функция включена, то после разделения, выбранные страницы будут удаленны из общего списка. После удаления всех страниц, они будут доступны снова"
+  "prompt-order" : "При активации кнопка меняет цвет. Если функция включена, порядок выделения страниц - важен! Обратите внимание на порядок выделенных страниц! Также включается возможность менять страницы местами перетаскиванием",
+  "prompt-delete" : "При активации кнопка меняет цвет. Если функция включена, то после разделения, выбранные страницы будут удаленны из списка. Нажмите сброс для возврата"
   
   
   
